ci-cd/terraform/vpc.tf
resource "aws_vpc" "study_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "study-vpc"
  }
}
